src/test/ui/struct-fields-hints-no-dupe.stderr
error[E0560]: struct `A` has no field named `bar`
  --> $DIR/struct-fields-hints-no-dupe.rs:20:9
   |
LL |         bar : 42,
   |         ^^^ field does not exist - did you mean `barr`?

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0560"
